google font added to index and css - MVP officially done

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,15 +3,7 @@
 <html>
 <head>
   <title>Tubbs' local helper</title>
-  <style>
-  @font-face {
-      font-family: "5yearsoldfont";
-      src:url("/Users/b_barks/Downloads/5yearsoldfont/5yearsoldfont.ttf");
-  }
-    html, body{
-      font-family: "5yearsoldfont";
-  }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
