--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,8 @@
   <nav id="menu">
     <li class="menu-item"><a href='/a-local-shop'>A local shop</a></li>
     <li class="menu-item"><a href='/a-local-shop/new'>Edward fetched a new precious!</a></li>
+    <li class="menu-item"><a href='/sources'>Sources</a></li>
+
   </nav>
   <h1 id="logo">Tubbs' precious things</h1>
   <%= yield %>
