sinatra root directory altered in both controllers

--- a/views/sources/index.erb
+++ b/views/sources/index.erb
@@ -6,7 +6,7 @@
 </table>
 
 <div id="sources-wrapper">
-  <% @sources.each do |source| %>
+  <% @all_sources.each do |source| %>
 <table style="text-align: center; table-layout: fixed; width:100%">
   <tr>
     <td><%= source.name %></td>
