typo correction & CSS path cut off by reorganisation

--- a/views/precious_things/index.erb
+++ b/views/precious_things/index.erb
@@ -4,7 +4,7 @@
     <th>Description: </th>
     <th>Stock: </th>
     <th>Buying cost(in human lives): </th>
-    <th>Selling price(in human lives): </th>
+    <th>Selling price: </th>
     <th>Which source it came from: </th>
   </tr>
 </table>
