--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
 <head>
   <title>Tubbs' local helper</title>
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/../public/style.css">
 </head>
 <body>
   <nav id="menu">
