create issue resolved, css still causing trouble

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
 <html>
 <head>
   <title>Tubbs' local helper</title>
+  <link rel="stylesheet" type="text/css" href="/../public/style.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-  <link rel="stylesheet" href="/../public/style.css">
 </head>
 <body>
   <nav id="menu">
