--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,8 @@
+<div class="home">
 <table style="table-layout:fixed; width:100%">
 <% for thing in @all_precious_things %>
 <tr><td><%= thing.main_index %></td>
 </tr>
 <%end%>
 </table>
+</div>
