--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav id="menu">
-    <li class="menu-item"><a href='/'>Home</a></li>
+    <li class="menu-item"><a href='/a-local-shop/home'>Home</a></li>
     <li class="menu-item"><a href='/a-local-shop'>A local shop</a></li>
     <li class="menu-item"><a href='/a-local-shop/new'>Edward fetched a new precious!</a></li>
     <li class="menu-item"><a href='/sources'>Sources</a></li>
