css reset added, photo updated with url, font still doesn't apply

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en-GB">
 <head>
-  <title>Tubbs' local helper</title>
-  <link rel="stylesheet" type="text/css" href="/../public/style.css">
+  <!-- <style>
+    @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
+  </style> -->
+  <link rel="stylesheet" type="text/css" href="public/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="public/style.css">
+  <!-- <meta charset="utf-8"> -->
+  <img src="https://s3.amazonaws.com/gs-geo-images/86d660fd-f8da-4af8-9723-d4d275940e56_l.jpg" alt="Royston Vasey signpost and the local shop">
+  <title>Tubbs' local helper</title>
+
+
 </head>
 <body>
   <nav id="menu">
