--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
 
-html, body {
+* {
   font-family: 'Shadows Into Light', cursive;
-}
+  font-style: normal;
+  font-size: 100%;
+};
