--- a/views/precious_things/new.erb
+++ b/views/precious_things/new.erb
@@ -1,5 +1,5 @@
 <div id="new">
-  <p> Edward fetched a new precious! </p>
+  <h1> Edward fetched a new precious! </h1>
 
   <div class="form">
     <form action="/a-local-shop" method="post">
