--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,167 @@
 /* @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light'); */
 
-* {
+html, body {
   font-family: 'Shadows Into Light', cursive;
-  font-style: normal;
   font-size: 100%;
 }
 
-img {
-align-items: center;
+.image {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-h1, h2, h3 {
+.title {
+  border-top: 5px;
+}
+
+th {
   font-weight: bold;
+}
+
+body {
+  background-image: url(https://png.pngtree.com/element_pic/00/16/06/12575d0608a912a.jpg);
+  background-repeat: no-repeat;
+  background: #75726B;
+  background: -moz-linear-gradient(left, #75726B 0%, #BAAB82 100%, #6B3375 100%);
+  background: -webkit-linear-gradient(left, #75726B 0%, #BAAB82 100%, #6B3375 100%);
+  width: 70%;
+  margin: auto;
+}
+
+a {
+  color: #650E07;
+}
+
+#menu {
+    opacity: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 10px 0 black;
+}
+
+#menu * {
+  display: inline;
+}
+
+#menu li {
+  margin: 20px;
+}
+
+#menu li a {
+  color: black;
+  text-decoration: none;
+}
+
+
+h1 {
+  font-size:3em;
+  font-weight: 300;
+  line-height:1em;
+  text-align: center;
+}
+
+h2 {
+  font-size:1em;
+  font-weight: 300;
+  text-align: center;
+  display: block;
+  line-height:1em;
+  padding-bottom: 2em;
+}
+
+h2 a {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #650E07;
+  text-decoration: none;
+}
+
+table th h1 {
+	font-weight: bold;
+	font-size: 1em;
+  text-align: left;
+}
+
+table td {
+	font-weight: normal;
+	font-size: 1em;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+	   -moz-box-shadow: 0 2px 2px -2px #0E1119;
+	        box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+table {
+	text-align: left;
+	overflow: hidden;
+	width: 80%;
+	margin: 0 auto;
+  display: table;
+  padding: 0 0 0 0;
+}
+
+table td, table th {
+	padding-bottom: 2%;
+	padding-top: 2%;
+  padding-left:2%;
+}
+
+/* Background-color of the odd rows */
+table tr:nth-child(odd) {
+	background-color: #75726B;
+}
+
+/* Background-color of the even rows */
+table tr:nth-child(even) {
+	  background-color: #BAAB82;
+}
+
+table th {
+  opacity: 1;
+}
+
+table td:first-child { color: #650E07; }
+
+table tr:hover {
+   background-color: #202427;
+-webkit-box-shadow: 0 6px 6px -6px #111520;
+	   -moz-box-shadow: 0 6px 6px -6px #111520;
+	        box-shadow: 0 6px 6px -6px #111520;
+}
+
+table td:hover {
+  background-color: #202427;
+  color: #650E07;
+  font-weight: bold;
+  font-size: 125%;
+
+  box-shadow: #111520 -1px 1px, #111520 -2px 2px, #111520 -3px 3px, #111520 -4px 4px, #111520 -5px 5px, #111520 -6px 6px;
+  transform: translate3d(6px, -6px, 0);
+
+  transition-delay: 0s;
+	transition-duration: 0.4s;
+	transition-property: all;
+  transition-timing-function: line;
+}
+
+form {
+display: table;
+margin:auto;
+text-align: table;
+}
+
+#new {
+text-align: center;
+}
+
+.ul {
+  align-content: center;
+  display:flex;
+/* something for centering the list */
 }
