--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,10 +7,10 @@
     @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
   </style> -->
   <!-- <link rel="stylesheet" href="reset.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-  <img src="https://s3.amazonaws.com/gs-geo-images/86d660fd-f8da-4af8-9723-d4d275940e56_l.jpg" alt="Royston Vasey signpost and the local shop">
-  <title>Tubbs' local helper</title>
+  <br>
+  <title class="title">Tubbs' local helper</title>
 
 
 </head>
@@ -23,6 +23,12 @@
 
   </nav>
   <h1 id="logo">Tubbs' precious things</h1>
+  <div class="image">
+  <img src="https://s3.amazonaws.com/gs-geo-images/86d660fd-f8da-4af8-9723-d4d275940e56_l.jpg" alt="Royston Vasey signpost and the local shop">
+  </div>
+  <br>
+  <br>
+
   <%= yield %>
 
 </body>
