--- a/views/precious_things/edit.erb
+++ b/views/precious_things/edit.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/a-local-shop/<%= @all_precious_things.id %>">
+<form class="form" method="post" action="/a-local-shop/<%= @all_precious_things.id %>">
   <label for="name-field">Name: </label>
   <input
   type="text"
