--- a/views/precious_things/show.erb
+++ b/views/precious_things/show.erb
@@ -1,10 +1,10 @@
-<h2><%= @all_precious_things.name %></h2>
+<h1><%= @all_precious_things.name %></h1>
 
-<p>Description: <%= @all_precious_things.description  %></p>
-<p>Stock: <%= @all_precious_things.stock_quantity %></p>
-<p>Cost: <%= @all_precious_things.buying_cost %></p>
-<p>Price: <%= @all_precious_things.selling_price  %></p>
+<h2>Description: <%= @all_precious_things.description  %></h2>
+<h2>Stock: <%= @all_precious_things.stock_quantity %></h2>
+<h2>Cost: <%= @all_precious_things.buying_cost %></h2>
+<h2>Price: <%= @all_precious_things.selling_price  %></h2>
 
-<a href="/a-local-shop/<%= @all_precious_things.id %>/edit">Change this precious</a>
+<a href="/a-local-shop/<%= @all_precious_things.id %>/edit"><h1>Change this precious</h1></a>
 <br>
 <form action="/a-local-shop/<%= @all_precious_things.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
