--- a/views/precious_things/show.erb
+++ b/views/precious_things/show.erb
@@ -7,4 +7,4 @@
 
 <a href="/a-local-shop/<%= @all_precious_things.id %>/edit"><h1>Change this precious</h1></a>
 <br>
-<form action="/a-local-shop/<%= @all_precious_things.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
+<form class="button" action="/a-local-shop/<%= @all_precious_things.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
