--- a/views/index.erb
+++ b/views/index.erb
@@ -1,28 +1,25 @@
+<div class="note_container"
+  <img src="http://hanatemplate.com/images/old-lined-paper-7.png" alt="stack of notes">
+  <div class="note_text">Local Inventory</div>
+</div>
+
+<div class="home_table">
 <table style="table-layout:fixed; width:100%">
   <tr>
     <th>Precious things: </th>
-    <th>Description: </th>
-    <th>Stock: </th>
-    <th>Buying cost(in human lives): </th>
     <th>Which source it came from: </th>
   </tr>
 </table>
 
+
 <div id="home-wrapper">
-  <% @all_precious_things.each do |precious_thing| %>
+  <% @precious.each do |thing| %>
 <table style="text-align: center; table-layout: fixed; width:100%">
   <tr>
-    <td><a href="/a-local-shop/<%= precious_thing.id %>"><%= precious_thing.name %></td>
-    <td><%= precious_thing.description %></td>
-    <td><%= precious_thing.stock_quantity %> <%= precious_thing.stock_warning %></td>
-    <td><%= precious_thing.buying_cost %></td>
-
-  <% @all_sources.each do |source| %>
-    <% if precious_thing.source_id == source.id %>
-    <td> <%= source.name %> </td>
-    <%end%>
-  <%end%>
+    <td><a href="/a-local-shop/<%= thing['id'] %>"><%= thing['precious_thing_name'] %></td>
+    <td> <%= thing['source_name'] %> </td>
   </tr>
 </table>
   <% end %>
+</div>
 </div>
