--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <!-- <style>
     @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
   </style> -->
-  <!-- <link rel="stylesheet" href="reset.css"> -->
+  <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/style.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <br>
@@ -24,14 +24,12 @@
   </nav>
   <h1 id="logo">Tubbs's precious things</h1>
   <div class="image">
-  <img src="https://s3.amazonaws.com/gs-geo-images/86d660fd-f8da-4af8-9723-d4d275940e56_l.jpg" alt="Royston Vasey signpost and the local shop">
   </div>
   <br>
   <br>
     <%= yield %>
-
 </body>
-  <div class="bloodstain">
-    <img src="https://t4.rbxcdn.com/b0b75fbe6ffc1260b2765ad5ab5d5a6d" alt="blood stain"/>
-  </div>
+
+
+
 </html>
