--- a/public/style.css
+++ b/public/style.css
@@ -189,30 +189,47 @@ ul {
 .button {
 
 } */
+/* ------------------------------------------------------- */
 
-.note_container {
-  position: relative;
-  text-align: center;
-  color: white;
-
-.note_text {
+.note_container h2 {
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: 900;
+  color: black;
+  margin: 0;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 200px;
+  left: 200px;
+  font-size: 2rem;
   transform: translate(-50%, -50%);
 }
 
-/* .note {
-  height: 530px;
+.note_container {
+  background-image: url(http://hanatemplate.com/images/old-lined-paper-7.png);
+  background-size: cover;
   width: 410px;
-  position: absolute;
+  height: 530px;
+  position: relative;
   top: 500px;
-  left: 500px;
-} */
+  left:500px;
+}
 
-/* .home_table {
-  width: 30%;
-  position:absolute;
-  margin-top:500px;
-  margin-left:900px;
-} */
+.home_table {
+  width: 20%;
+  position: absolute;
+  top: 750px;
+  left: 1000px;  
+}
+
+.home_table th {
+  font-weight: bold;
+}
+
+.home_table th, td {
+  padding-bottom: 1%;
+  padding-top: 1%;
+  padding-left:1%;
+  margin: auto;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+     -moz-box-shadow: 0 2px 2px -2px #0E1119;
+          box-shadow: 0 2px 2px -2px #0E1119;
+}
