--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,6 @@
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
-  <!-- <style>
-    @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
-  </style> -->
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/style.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
@@ -15,16 +12,15 @@
 
 </head>
 <body>
-  <nav id="menu">
-    <li class="menu-item"><a href='/'>Home</a></li>
-    <li class="menu-item"><a href='/a-local-shop'>A local shop</a></li>
-    <li class="menu-item"><a href='/a-local-shop/new'>Edward fetched a new precious!</a></li>
-    <li class="menu-item"><a href='/sources'>Sources</a></li>
-
-  </nav>
-  <h1 id="logo">Tubbs's precious things</h1>
-  <div class="image">
-  </div>
+  <header class="header">
+    <!-- <img class="banner" src="https://img.geocaching.com/cache/large/86d660fd-f8da-4af8-9723-d4d275940e56.jpg" alt="a local shop"> -->
+    <nav class="menu">
+      <li class="menu-item"><a href='/'>Home</a></li>
+      <li class="menu-item"><a href='/a-local-shop'>Tubbs's precious things</a></li>
+      <li class="menu-item"><a href='/a-local-shop/new'>Edward fetched a new precious!</a></li>
+      <li class="menu-item"><a href='/sources'>Sources</a></li>
+    </nav>
+  </header>
   <br>
   <br>
     <%= yield %>
