--- a/public/style.css
+++ b/public/style.css
@@ -191,6 +191,15 @@ ul {
 } */
 /* ------------------------------------------------------- */
 
+.tea {
+  height:400px;
+  width:400px;
+  position: absolute;
+  left: 1000px;
+  top: 550px;
+  z-index: -1;
+}
+
 .note_container h2 {
   font-family: 'Shadows Into Light', cursive;
   font-weight: 900;
@@ -209,16 +218,16 @@ ul {
   width: 410px;
   height: 530px;
   position: relative;
-  top: 450px;
-  left:500px;
+  top: 180px;
+  left:150px;
 }
 
 .home_table {
   background-color: #D9D3BE;
   width: 20%;
   position: absolute;
-  top: 600px;
-  left: 1000px;
+  top: 400px;
+  left: 800px;
 }
 
 .home_table th {
@@ -255,7 +264,6 @@ tbody tr:nth-child(2n){
 html {
   background-image: url(https://img.freepik.com/free-vector/damask-seamless-pattern-background_1217-821.jpg?size=338&ext=jpg);
   background-repeat: repeat;
-
 }
 
 a {
@@ -263,9 +271,10 @@ a {
 }
 
 .menu {
-  background-color: #4d402c 0.9;
+  background-color: #817150 0.9;
   font-family: 'Shadows Into Light';
-  font-size: 120%;
+  font-size: 150%;
+  font-weight: bold;
   position: fixed;
   left: 0;
   top: 0;
@@ -280,8 +289,9 @@ a {
 }
 
 .menu li {
-  margin: 20px;
+  margin: auto;
 }
 
 .menu li a {
-  text-decoration: none;
+  color: black;
+  text-decoration:underline;
