--- a/public/style.css
+++ b/public/style.css
@@ -77,12 +77,73 @@ a {
   color: #006400;
 }
 
-.precious_table {
-  table-layout:fixed;
-  border: 1px solid black;
-  width: 80%;
-  align-content: center;
+
+.precious_index th h3 {
+	  font-weight: bold;
+	  font-size: 1em;
+  text-align: left;
+  color: black;
 }
+
+.precious_index td {
+	  font-weight: normal;
+	  font-size: 1em;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+	   -moz-box-shadow: 0 2px 2px -2px #0E1119;
+	        box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.precious_index {
+	text-align: left;
+	overflow: hidden;
+	width: 80%;
+  margin: 0 auto;
+  display: table;
+  padding: 0 0 8em 0;
+}
+
+.precious_index td, .precious_index th {
+	padding-bottom: 2%;
+	padding-top: 2%;
+  padding-left:2%;
+}
+
+.precious_index tr:nth-child(odd) {
+	background-color: #fef9e9;
+}
+
+.precious_index tr:nth-child(even) {
+	background-color: #2C3446;
+}
+
+.precious_index th {
+	background-color: #DED3BC;
+}
+
+.precious_index td:first-child { color: #FB667A; }
+
+.precious_index tr:hover {
+  background-color: #e9eefe;
+-webkit-box-shadow: 0 6px 6px -6px #a3a6b1;
+	   -moz-box-shadow: 0 6px 6px -6px #a3a6b1;
+	        box-shadow: 0 6px 6px -6px #a3a6b1;
+}
+
+.precious_index td:hover {
+  background-color: #e9eefe;
+  color: #171719;
+  font-weight: bold;
+
+  box-shadow: #a3a6b1 -1px 1px, #a3a6b1 -2px 2px, #a3a6b1 -3px 3px, #a3a6b1 -4px 4px, #a3a6b1 -5px 5px, #a3a6b1 -6px 6px;
+  transform: translate3d(6px, -6px, 0);
+
+  transition-delay: 0s;
+	transition-duration: 0.4s;
+	transition-property: all;
+  transition-timing-function: line;
+}
+
+
 
 h1 {
   padding: 80px;
@@ -98,10 +159,10 @@ h1 {
   font-family: 'Shadows Into Light';
   font-size: 150%;
   font-weight: bold;
-  position: fixed;
   left: 0;
   top: 0;
   right: 0;
+  position:static;
   height: 60px;
   display: flex;
   box-shadow: 0 0 10px 0 black;
