--- a/views/precious_things/show.erb
+++ b/views/precious_things/show.erb
@@ -1,10 +1,14 @@
-<h1><%= @all_precious_things.name %></h1>
+<div class="precious_show">
+  <ul>
+    <il><h1><%= @all_precious_things.name %></h1></il>
 
-<h2>Description: <%= @all_precious_things.description  %></h2>
-<h2>Stock: <%= @all_precious_things.stock_quantity %></h2>
-<h2>Cost: <%= @all_precious_things.buying_cost %></h2>
-<h2>Price: <%= @all_precious_things.selling_price  %></h2>
+    <il>Description: <%= @all_precious_things.description  %></il>
+    <il>Stock: <%= @all_precious_things.stock_quantity %></il>
+    <il>Cost: <%= @all_precious_things.buying_cost %></il>
+    <il>Price: <%= @all_precious_things.selling_price  %></il>
 
-<a href="/a-local-shop/<%= @all_precious_things.id %>/edit"><h1>Change this precious</h1></a>
-<br>
-<form class="button" action="/a-local-shop/<%= @all_precious_things.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
+    <il><a href="/a-local-shop/<%= @all_precious_things.id %>/edit">Change this precious</a></il>
+    <br>
+    <il><form class="button" action="/a-local-shop/<%= @all_precious_things.id %>/delete" method="POST"><input type="submit" value="Delete"></form></il>
+  </ul>
+<div>
