--- a/views/precious_things/index.erb
+++ b/views/precious_things/index.erb
@@ -31,3 +31,7 @@
       <% end %>
   </table>
 </div>
+
+<div class="bloodstain_wrapper">
+  <img class="bloodstain" src="https://t4.rbxcdn.com/b0b75fbe6ffc1260b2765ad5ab5d5a6d" alt="bloodstain">
+</div>
